Fix dependabot registries 2

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,10 +31,10 @@
 
 version: 2
 
-registries:
-  maven-oap:
-    type: maven-repository
-    url: https://mvn.oaplatform.org
+#registries:
+#  maven-oap:
+#    type: maven-repository
+#    url: https://mvn.oaplatform.org
 #    username: xenoss
 #    password: ${{secrets.MY_ARTIFACTORY_PASSWORD}}
 
