--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>17.10.37.16</oap.project.version>
+        <oap.project.version>17.10.37.17</oap.project.version>
 
         <oap.deps.testng.version>7.5</oap.deps.testng.version>
         <oap.deps.assertj.version>3.23.1</oap.deps.assertj.version>
@@ -72,7 +72,23 @@
 
         <oap.deps.jol.version>0.16</oap.deps.jol.version>
         <oap.deps.luben.version>1.5.2-5</oap.deps.luben.version>
-        <oap.deps.micrometer.version>1.10.2</oap.deps.micrometer.version>
+        <!-- NOTE: micrometer version 1.10.x has an issue which causes to change metric's names
+        for instance "task_queue" in 1.6 is modified by adding a suffix "_total" unchanged for COUNTER type
+        and in later versions it is left unchanged so exception will arise.
+        In order to fix that we have to rename all GAUGEs with same name as COUNTER's to different ones,
+        for instance by adding "extra" suffix
+        Example:
+            Metrics.counter( "task_queue", Tags.of( "type", "total" ) );
+            Metrics.gauge( "task_queue", Tags.of( "type", "current" ), this, 5 );
+
+        should be changed to
+
+            Metrics.counter( "task_queue", Tags.of( "type", "total" ) );
+            Metrics.gauge( "task_queue_extra", Tags.of( "type", "current" ), this, 5 );
+
+         -->
+        <oap.deps.micrometer.version>1.6.9</oap.deps.micrometer.version>
+
         <oap.deps.fastutil.version>8.5.9</oap.deps.fastutil.version>
         <oap.deps.quartz.version>2.3.2</oap.deps.quartz.version>
         <oap.deps.fop.version>2.2.1</oap.deps.fop.version>
