--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/testFinalParameter.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/testFinalParameter.conf
@@ -5,6 +5,7 @@ services {
     parameters {
       a = new value // pubilc final String
       al = ["val1"]
+      extra = constructor param
     }
   }
 }
