--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,4 @@ inspectionProfiles
 kotlinc.xml
 .attach*
 .flattened-pom.xml
-.idea/jarRepositories.xml
-.idea/jsLibraryMappings.xml
-.idea/runConfigurations.xml
-.idea/checkstyle-idea.xml
-.idea/codeStyles/Project.xml
+.idea
