--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -44,8 +44,8 @@ updates:
     directory: "/" # Location of package manifests
 #    registries:
 #      -   maven-oap
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 2
     schedule:
       interval: "monthly"
     allow:
-      - dependency-name: "oap"
+      - dependency-name: "oap:*"
