--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -18,6 +18,12 @@ services {
     parameters {
       //      port = 8080
 
+//      sslConfiguration {
+//        port = 8443
+//        jks = path(/tmp/java.jks)
+//        password = test
+//      }
+
       backlog = -1
       idleTimeout = -1
       readTimeout = 60s
