fix: CCE ( KernelLinkImplementationsTest#testConstructorReferenceFinalField )

--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
@@ -2,22 +2,21 @@ name = creference
 
 services {
   links {
-    implementation = "oap.application.KernelLinkImplementationsTest$TestCLinks"
+    implementation = oap.application.KernelLinkImplementationsTest.TestCLinks
     parameters.link = modules.this.link1
     supervision.supervise = true
   }
   
   link1 {
-    implementation = "oap.application.KernelLinkImplementationsTest$TestCLink"
+    implementation = oap.application.KernelLinkImplementationsTest.TestCLink
     link.testLink = modules.this.links
     supervision.supervise = true
   }
   
   link2 {
-    implementation = "oap.application.KernelLinkImplementationsTest$TestCLink"
+    implementation = oap.application.KernelLinkImplementationsTest.TestCLink
     link.links = modules.this.links
     parameters.link = modules.this.link1
     supervision.supervise = true
   }
-
 }
