--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
@@ -3,14 +3,14 @@
 
   services {
     m {
-      implementation = "oap.application.KernelLinkImplementationsTest$FieldReference"
+      implementation = oap.application.KernelLinkImplementationsTest.FieldReference
       parameters {
         ti = null
       }
     }
 
     ti1 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
+      implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl1
       link {
         ti = modules.this.m
       }
