--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -2,14 +2,14 @@
   name = field-references-unknown-interface
   services {
     m {
-      implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
+      implementation = oap.application.KernelLinkImplementationsTest.FieldReferences
       parameters {
         tis = []
       }
     }
 
     ti1 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
+      implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl1
       link {
         tis = modules.this.m
       }
