--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references.conf
@@ -2,7 +2,7 @@
   name = field-references
   services {
     m {
-      implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
+      implementation = oap.application.KernelLinkImplementationsTest.FieldReferences
       parameters {
         tis = []
       }
