--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
@@ -3,18 +3,18 @@
   dependsOn = field-references
   services {
     ti1 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
+      implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl1
       link.tis = modules.field-references.m
       supervision.supervise = true
     }
     ti2 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl2"
+      implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl2
       link.tis = modules.field-references.m
       enabled = false
       supervision.supervise = true
     }
     ti3 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl3"
+      implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl3
       link.tis = modules.field-references.m
       supervision.supervise = true
     }
