simpler test configuration

--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
@@ -3,20 +3,17 @@ name = creference
 services {
   links {
     implementation = oap.application.KernelLinkImplementationsTest.TestCLinks
-    parameters.link = modules.this.link1
-    supervision.supervise = true
+    parameters.reference = modules.this.link1
   }
   
   link1 {
     implementation = oap.application.KernelLinkImplementationsTest.TestCLink
-    link.testLink = modules.this.links
-    supervision.supervise = true
+    link.linkingPhaseTestLink = modules.this.links
   }
   
   link2 {
     implementation = oap.application.KernelLinkImplementationsTest.TestCLink
-    link.links = modules.this.links
-    parameters.link = modules.this.link1
-    supervision.supervise = true
+    link.references = modules.this.links
+    parameters.reference = modules.this.link1
   }
 }
