renamed beans in tests to highlight what's doing here

--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module3.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module3.conf
@@ -1,17 +1,21 @@
 name = test-profile3
+
 services {
-  profile1 {
-    profile = -profile-name
+
+  bean-by-profile1 {
+    name = bean-name
+    profile = profile-1
     implementation = "oap.application.KernelProfileTest$TestProfile1"
-    name = profile
+  }
+  bean-by-profile2 {
+    name = bean-name
+    profile = profile-2
+    implementation = "oap.application.KernelProfileTest$TestProfile2"
   }
   container {
     implementation = "oap.application.KernelProfileTest$TestContainer"
-    parameters.profile = modules.this.profile
-  }
-  profile2 {
-    profile = profile-name
-    name = profile
-    implementation = "oap.application.KernelProfileTest$TestProfile2"
+    parameters {
+      beanName = modules.this.bean-name
+    }
   }
 }
