--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module6.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module6.conf
@@ -10,18 +10,24 @@ services {
   container1 {
     profile = run
     implementation = "oap.application.KernelProfileTest$TestContainer"
-    parameters.profile = modules.this.profile
-  }
-  profile2 {
-    profile = -run
-    implementation = "oap.application.KernelProfileTest$TestProfile2"
-    name = profile
+    parameters {
+      beanName = modules.this.profile
+    }
   }
   profile1 {
-    profile: run
-    implementation = "oap.application.KernelProfileTest$TestProfile1"
     name = profile
-    parameters.profile1 = modules.this.profile-11
+    profile = run
+    implementation = "oap.application.KernelProfileTest$TestProfile1"
+    parameters {
+      profile1 = modules.this.profile-11
+    }
   }
-  profile-11.implementation = "oap.application.KernelProfileTest$TestProfile1"
+  profile2 {
+    name = profile
+    profile = -run
+    implementation = "oap.application.KernelProfileTest$TestProfile2"
+  }
+  profile-11 {
+    implementation = "oap.application.KernelProfileTest$TestProfile1"
+  }
 }
