--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -450,7 +450,7 @@
         <dependency>
             <groupId>com.github.luben</groupId>
             <artifactId>zstd-jni</artifactId>
-            <version>${oap.deps.luben.version}</version>
+            <version>${oap.deps.zstd-jni.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jol</groupId>
