--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <oap.deps.logback.version>1.4.8</oap.deps.logback.version>
         <oap.deps.slf4j.version>2.0.7</oap.deps.slf4j.version>
 
-        <oap.deps.mockito.version>4.10.0</oap.deps.mockito.version>
+        <oap.deps.mockito.version>4.11.0</oap.deps.mockito.version>
 
         <oap.deps.okhttp.version>4.11.0</oap.deps.okhttp.version>
         <oap.deps.apache.httpcomponents.version>4.4.16</oap.deps.apache.httpcomponents.version>
@@ -72,7 +72,7 @@
 
         <oap.deps.jol.version>0.17</oap.deps.jol.version>
         <oap.deps.bucket4j.version>8.3.0</oap.deps.bucket4j.version>
-        <oap.deps.luben.version>1.5.5-4</oap.deps.luben.version>
+        <oap.deps.zstd-jni.version>1.5.5-5</oap.deps.zstd-jni.version>
         <!-- NOTE: micrometer version 1.10.x has an issue which causes to change metric's names
         for instance "task_queue" in 1.6 is modified by adding a suffix "_total" unchanged for COUNTER type
         and in later versions it is left unchanged so exception will arise.
@@ -99,15 +99,15 @@
         <oap.deps.javax.activation.version>1.1.1</oap.deps.javax.activation.version>
         <oap.deps.disruptor.version>1.2.21</oap.deps.disruptor.version>
 
-        <oap.deps.maven.plexus-utils.version>3.5.1</oap.deps.maven.plexus-utils.version>
-        <oap.deps.maven.plugin-build-helper.version>1.10</oap.deps.maven.plugin-build-helper.version>
+        <oap.deps.maven.plexus-utils.version>4.0.0</oap.deps.maven.plexus-utils.version>
+        <oap.deps.maven.plugin-build-helper.version>1.12</oap.deps.maven.plugin-build-helper.version>
         <oap.deps.maven.plugin-api.version>3.9.3</oap.deps.maven.plugin-api.version>
         <oap.deps.maven.version>3.0-alpha-2</oap.deps.maven.version>
         <oap.deps.maven.plugin-annotations.version>3.9.0</oap.deps.maven.plugin-annotations.version>
         <oap.deps.maven.plugin-plugin.version>3.6.4</oap.deps.maven.plugin-plugin.version>
         <oap.deps.plugins.antlr4.version>4.13.0</oap.deps.plugins.antlr4.version>
 
-        <oap.deps.aws-java-sdk.version>1.12.495</oap.deps.aws-java-sdk.version>
+        <oap.deps.aws-java-sdk.version>1.12.506</oap.deps.aws-java-sdk.version>
         <oap.deps.s3mock.version>0.2.6</oap.deps.s3mock.version>
 
         <oap.deps.slack-api.version>v1.2.0.RELEASE</oap.deps.slack-api.version>
