minor log fixes

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -31,8 +31,8 @@ services {
       statistics = false
       forceCompressionSupport = false
 
-      alwaysSetDate = true;
-      alwaysSetKeepAlive = true;
+      alwaysSetDate = true
+      alwaysSetKeepAlive = true
     }
     supervision.supervise = true
   }
@@ -113,6 +113,7 @@ services {
     parameters {
       port = 8081
       server = modules.this.oap-http-server
+      uuid = 18888a3e-2986-4431-98ed-437cefda5e86
     }
   }
 
