OAP-105 Remove direct disabling OAP dependencies, OAP-106 Remove disabling aka minus Profiles functionality

--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module-profiles.yaml
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module-profiles.yaml
@@ -3,5 +3,10 @@ services:
   profile:
     profiles:
       - profile-name1
-      - -profile-name2
+      - profile-name2
+    implementation: "oap.application.KernelProfileTest$TestProfile1"
+  disabledProfile:
+    profiles:
+      - profile-name1
+      - disabled
     implementation: "oap.application.KernelProfileTest$TestProfile1"
