--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module.yaml
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module.yaml
@@ -5,7 +5,7 @@ services:
     implementation: "oap.application.KernelProfileTest$TestProfile1"
 
   profile2:
-    profile: -profile-name
+    profile: disabled
     implementation: "oap.application.KernelProfileTest$TestProfile2"
 
   profile3:
