--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
@@ -12,8 +12,8 @@
       dependsOn = [s2]
     }
     s2 {
+      profiles = [disabled]
       implementation = oap.application.ServiceOne
-      enabled = false
       parameters {
         i = 2
       }
