--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module6.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module6.conf
@@ -24,7 +24,7 @@ services {
   }
   profile2 {
     name = profile
-    profile = -run
+    profile = disable
     implementation = "oap.application.KernelProfileTest$TestProfile2"
   }
   profile-11 {
