--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -8,7 +8,7 @@ services {
 
   oap-time-joda {
     name = oap-time
-    profile = -java-time
+    profile = disabled
     implementation = oap.time.JodaTimeService
   }
 
