HTTP port for Remoting

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -103,6 +103,7 @@ services {
       context = /remote/
       serialization = DEFAULT
       kernel = kernel.self
+//      port = 8081
     }
     supervision.supervise = true
   }
