--- a/oap-hadoop/pom.xml
+++ b/oap-hadoop/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>${oap.project.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
