--- a/oap-hadoop/src/main/resources/META-INF/oap-module.conf
+++ b/oap-hadoop/src/main/resources/META-INF/oap-module.conf
@@ -3,12 +3,19 @@ name = oap-hadoop
 services {
   oap-hadoop-configuratinon {
     implementation = oap.hadoop.OapHadoopConfiguration
-    parameters.configuration {
-//      "fs.s3a.access.key" = access key
-//      "fs.s3a.secret.key" = secret key
-//      "fs.s3a.aws.credentials.provider" = provider
+    parameters {
+      // S3A, SFTP, FILE
+      fileSystemType = S3A
+      configuration {
+//        "fs.s3a.access.key" = access key
+//        "fs.s3a.secret.key" = secret key
+//        "fs.s3a.backet" = backet name
+//        "fs.s3a.region" = region
+//        "fs.s3a.aws.credentials.provider" = provider
 
-//      "fs.azure.account.key.youraccount.blob.core.windows.net" = access key
+//        "fs.sftp.hostname" = host
+//        "fs.sftp.port" = 22
+      }
     }
   }
 }
