--- a/oap-hadoop/src/main/resources/META-INF/oap-module.conf
+++ b/oap-hadoop/src/main/resources/META-INF/oap-module.conf
@@ -15,6 +15,8 @@ services {
 
 //        "fs.sftp.hostname" = host
 //        "fs.sftp.port" = 22
+
+//        "fs.file.root" = /tmp
       }
     }
   }
