--- a/oap-hadoop/src/main/resources/META-INF/oap-module.conf
+++ b/oap-hadoop/src/main/resources/META-INF/oap-module.conf
@@ -7,16 +7,16 @@ services {
       // S3A, SFTP, FILE
       fileSystemType = S3A
       configuration {
-//        "fs.s3a.access.key" = access key
-//        "fs.s3a.secret.key" = secret key
-//        "fs.s3a.backet" = backet name
-//        "fs.s3a.region" = region
-//        "fs.s3a.aws.credentials.provider" = provider
+//        fs.s3a.access.key = access key
+//        fs.s3a.secret.key = secret key
+//        fs.s3a.backet = backet name
+//        fs.s3a.region = region
+//        fs.s3a.aws.credentials.provider = provider
 
-//        "fs.sftp.hostname" = host
-//        "fs.sftp.port" = 22
+//        fs.sftp.hostname = host
+//        fs.sftp.port = 22
 
-//        "fs.file.root" = /tmp
+//        fs.file.root = /tmp
       }
     }
   }
