--- a/oap-hadoop/src/main/resources/META-INF/oap-module.conf
+++ b/oap-hadoop/src/main/resources/META-INF/oap-module.conf
@@ -9,8 +9,7 @@ services {
       configuration {
 //        fs.s3a.access.key = access key
 //        fs.s3a.secret.key = secret key
-//        fs.s3a.backet = backet name
-//        fs.s3a.region = region
+//        fs.s3a.endpoint = backet name
 //        fs.s3a.aws.credentials.provider = provider
 
 //        fs.sftp.hostname = host
