--- a/oap-hadoop/pom.xml
+++ b/oap-hadoop/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-bundle</artifactId>
-            <version>1.12.543</version>
+            <version>${oap.deps.aws-java-sdk-bundle.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
