--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/beanFromString.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/beanFromString.conf
@@ -4,7 +4,7 @@ services {
     implementation = oap.application.KernelTest.Service3
     parameters {
       name = a
-      service3 = "str({name = b()})"
+      service3 = "hocon({name = b()})"
     }
   }
 }
