--- a/oap-stdlib/src/test/resources/META-INF/json-ext.conf
+++ b/oap-stdlib/src/test/resources/META-INF/json-ext.conf
@@ -3,6 +3,12 @@ ext = [
     class = oap.json.ext.ExtDeserializerTest.Bean
     field = ext
     implementation = oap.json.ext.ExtDeserializerTest.TestExt
+    disableOverwrite = true
+  }
+  {
+    class = oap.json.ext.ExtDeserializerTest.Bean
+    field = ext
+    implementation = oap.json.ext.ExtDeserializerTest.TestExtOverwritten
   }
   {
     class = oap.json.ext.ExtDeserializerTest.Bean
@@ -15,8 +21,6 @@ ext = [
     field = ext
     implementation = oap.json.ext.NpeExt
   }
-
-
   {
     class = oap.json.TestTemplateBean
     field = ext
