oap-template: disk cache

--- a/oap-template/src/main/resources/META-INF/oap-module.conf
+++ b/oap-template/src/main/resources/META-INF/oap-module.conf
@@ -3,8 +3,8 @@ services {
   oap-template-engine {
     implementation = oap.template.TemplateEngine
     parameters {
-      ttl = 30d
-      tmpPath = /tmp/template
+//      ttl = 30d
+//      diskCache = /tmp/template
     }
     supervision {
       schedule = true
