--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -12,4 +12,4 @@ jobs:
           file-to-check: pom.xml
       - name: use-version-from-check
         run:
-          echo "New version is: " ${{ steps.actions_project_version_check.outputs.version }}
+          echo "New version is: ${{ steps.actions_project_version_check.outputs.version }}"
