--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: avides/actions-project-version-check@latest
+      - uses: avides/actions-project-version-check@v1.4.0
         id: actions_project_version_check
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
