--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -10,12 +10,16 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
+      - name: mvn flatten:flatten
+        run: |
+          mvn flatten:flatten
+
       - name: project-version-check
         uses: avides/actions-project-version-check@v1.4.0
         id: actions_project_version_check
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          file-to-check: pom.xml
+          file-to-check: .flattened-pom.xml
 
       - name: project-version-output-check
         run: |
