--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -55,11 +55,6 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>${oap.deps.apache.compress.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${oap.deps.apache.lang.version}</version>
         </dependency>
@@ -177,10 +172,11 @@
             <artifactId>assertj-core</artifactId>
             <version>${oap.deps.assertj.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.airlift/aircompressor -->
         <dependency>
-            <groupId>org.lz4</groupId>
-            <artifactId>lz4-java</artifactId>
-            <version>${oap.deps.lz4.version}</version>
+            <groupId>io.airlift</groupId>
+            <artifactId>aircompressor</artifactId>
+            <version>${oap.deps.aircompressor.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.rholder</groupId>
@@ -446,11 +442,6 @@
                     <artifactId>jackson-annotations</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.github.luben</groupId>
-            <artifactId>zstd-jni</artifactId>
-            <version>${oap.deps.zstd-jni.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jol</groupId>
