--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -74,6 +74,11 @@
             <version>${oap.deps.slf4j.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${oap.deps.slf4j.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${oap.deps.logback.version}</version>
