--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -64,6 +64,11 @@
             <version>${oap.deps.apache.io.version}</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${oap.deps.apache.commons.codec.version}</version>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${oap.deps.joda.version}</version>
