--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>18.13.1</oap.project.version>
+        <oap.project.version>18.13.2</oap.project.version>
 
         <oap.deps.testng.version>7.8.0</oap.deps.testng.version>
         <oap.deps.assertj.version>3.24.2</oap.deps.assertj.version>
@@ -58,6 +58,7 @@
 
         <oap.deps.apache.lang.version>3.12.0</oap.deps.apache.lang.version>
         <oap.deps.apache.commons.text.version>1.10.0</oap.deps.apache.commons.text.version>
+        <oap.deps.apache.commons.codec.version>1.16.0</oap.deps.apache.commons.codec.version>
         <oap.deps.apache.collections.version>4.4</oap.deps.apache.collections.version>
         <oap.deps.apache.io.version>2.13.0</oap.deps.apache.io.version>
 
