--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap.maven</artifactId>
-        <version>18.3.7.5</version>
+        <version>21.0.0</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -27,7 +27,7 @@
     <repositories>
         <repository>
             <id>oap</id>
-            <url>https://mvn.oaplatform.org</url>
+            <url>https://artifacts.oaplatform.org/repository/maven/</url>
         </repository>
         <repository>
             <id>jitpack</id>
@@ -36,7 +36,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>18.13.2</oap.project.version>
+        <oap.project.version>21.0.0</oap.project.version>
 
         <oap.deps.testng.version>7.8.0</oap.deps.testng.version>
         <oap.deps.assertj.version>3.24.2</oap.deps.assertj.version>
