--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,9 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.0.0</oap.project.version>
+        <oap.project.version>21.0.1</oap.project.version>
+
+        <oap.deps.config.version>21.0.0</oap.deps.config.version>
 
         <oap.deps.testng.version>7.8.0</oap.deps.testng.version>
         <oap.deps.assertj.version>3.24.2</oap.deps.assertj.version>
@@ -70,7 +72,6 @@
 
         <oap.deps.jackson.version>2.15.2</oap.deps.jackson.version>
         <oap.deps.jackson-dataformat-hocon.version>1.1.0</oap.deps.jackson-dataformat-hocon.version>
-        <oap.deps.typesafe-config.version>1.4.3</oap.deps.typesafe-config.version>
 
         <oap.deps.lombok.version>1.18.30</oap.deps.lombok.version>
 
