--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -16,7 +16,15 @@ services {
     profile = http
     implementation = oap.http.server.nio.NioHttpServer
     parameters {
-      //      port = 8080
+      defaultPort {
+        httpPort = 8080
+//        httpsPort = 8443
+//        jksLocation = /path
+//        password = ...
+      }
+      additionalHttpPorts {
+        httprivate = 8081
+      }
 
       backlog = -1
       idleTimeout = -1
